fix form label padding from overlapping field, resolves #37

--- a/tubesync/common/static/styles/_forms.scss
+++ b/tubesync/common/static/styles/_forms.scss
@@ -4,7 +4,7 @@
     }
     .help-text {
         color: $form-help-text-colour;
-        padding: 1rem 0 1rem 0;
+        padding-bottom: 1rem;
     }
     label {
         text-transform: uppercase;
